# markdown-to-pdf

./: .env.example  .gitignore  .vercelignore  API.md  BUILD_COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile-dev  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  vercel.json
api/: index.py
app/: main.py
app/api/: deps.py
app/api/routes/: convert.py  themes.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: markdown_service.py  pdf_service.py  theme_service.py
app/templates/: pdf_template.html
app/themes/: academic.css  dark.css  default.css  github.css  minimal.css
app/utils/: exceptions.py  validators.py
tests/: test_convert.py  test_themes.py
