[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-to-pdf"
version = "1.0.0"
description = "Production-ready FastAPI backend that converts Markdown to styled PDFs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["markdown", "pdf", "fastapi", "weasyprint", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "markdown>=3.5.1",
    "weasyprint>=60.1",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "isort>=5.13.2",
    "mypy>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/devabdul70-droid/markdown-to-pdf"
Documentation = "https://github.com/devabdul70-droid/markdown-to-pdf#readme"
Repository = "https://github.com/devabdul70-droid/markdown-to-pdf.git"
Issues = "https://github.com/devabdul70-droid/markdown-to-pdf/issues"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.pylint.messages_control]
disable = "C0111,C0103,R0913"
